--- a/src/components/Puzzle/Dnd/style.less
+++ b/src/components/Puzzle/Dnd/style.less
@@ -1,7 +1,9 @@
 .container {
   min-height: 30px;
+  background: #fff;
   border: 1px solid #ccc;
   border-radius: 2px;
   padding: 10px;
+  margin-bottom: 10px;
 }
 
