--- a/src/components/Puzzle/Dragger/style.less
+++ b/src/components/Puzzle/Dragger/style.less
@@ -1,7 +1,7 @@
 .container {
   min-height: 30px;
   background: #fff;
-  border: 1px solid #ccc;
+  border: 1px dashed #ccc;
   border-radius: 2px;
   padding: 10px;
   margin-bottom: 10px;
