--- a/src/pages/Home/style.less
+++ b/src/pages/Home/style.less
@@ -1,21 +1,23 @@
 .header {
+  height: 100%;
   color: #fff;
-  padding: 3rem 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  padding-bottom: 100px;
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957);
-  &>h1 {
+  .container h1 {
     color: inherit;
-    font-size: 2.25rem;
-    margin-top: 0;
-    margin-bottom: 0.1rem;
+    font-size: 64px;
   }
-  &>h2 {
+  .container h2 {
     color: inherit;
-    font-size: 1.15rem;
-    margin-bottom: 2rem;
+    font-size: 18px;
     font-weight: normal;
     opacity: 0.7;
+    margin-bottom: 48px;
   }
 }
 .btn {
