--- a/src/pages/Workspace/style.less
+++ b/src/pages/Workspace/style.less
@@ -1,6 +1,11 @@
 .tabs {
   height: 100%;
   [class~="ant-tabs-content"] {
-    padding: 5px;
+    padding: 0;
+  }
+}
+.tree {
+  [class~="ant-tree-switcher"] {
+    display: none!important;
   }
 }
