--- a/src/pages/Workspace/style.less
+++ b/src/pages/Workspace/style.less
@@ -1,11 +1,6 @@
-.tabs {
+.tabsLeft {
   height: 100%;
   [class~="ant-tabs-content"] {
     padding: 0;
-  }
-}
-.tree {
-  [class~="ant-tree-switcher"] {
-    display: none!important;
   }
 }
