--- a/src/pages/Workspace/style.less
+++ b/src/pages/Workspace/style.less
@@ -1,6 +1,16 @@
+.header {
+  background: red;
+  height: 24px;
+}
+
 .tabsLeft {
   height: 100%;
   [class~="ant-tabs-content"] {
     padding: 0;
   }
+}
+
+.footer {
+  background: green;;
+  height: 24px;
 }
