--- a/src/pages/Workspace/style.less
+++ b/src/pages/Workspace/style.less
@@ -23,6 +23,15 @@
 
 .tabsLeft {
   height: 100%;
+  &>[class~="ant-tabs-bar"] {
+    [class~=ant-tabs-tab] {
+      padding: 8px 12px;
+      i { // Icon
+        margin: 0;
+        font-size: 22px;
+      }
+    }
+  }
   &>[class~="ant-tabs-content"] {
     padding: 0;
   }
@@ -33,15 +42,21 @@
   &>[class~="ant-tabs-bar"] {
     margin: 0;
     background: #e6e8eb;
+    &>[class~=ant-tabs-nav-container] {
+      height: 24px!important;
+    }
     [class~=ant-tabs-tab] {
       border-bottom: none!important;
+      height: 24px!important;
+      line-height: 24px!important;
+      font-size: 12px;
     }
     [class~=ant-tabs-tab-active] {
       background: #f0f2f5!important;
     }
   }
   &>[class~="ant-tabs-content"] {
-    height: calc(100% - 40px);
+    height: calc(100% - 24px);
     &>[class~="ant-tabs-tabpane-active"] {
       height: 100%;
     }
