--- a/src/pages/Workspace/Elements/style.less
+++ b/src/pages/Workspace/Elements/style.less
@@ -1,4 +1,11 @@
 .container {
   overflow: auto;
   height: 100%;
+  width: 100%;
+  transform-origin: 0 0;
+}
+.block {
+  display: inline-block;
+  margin: 4px;
+  cursor: pointer;
 }
