--- a/src/pages/Workspace/Cloud/style.less
+++ b/src/pages/Workspace/Cloud/style.less
@@ -4,7 +4,7 @@
   height: 100%;
   transform-origin: 0 0;
   [class~=ant-list-item-meta] {
-    margin-bottom: 0;
+    margin-bottom: 8px;
   }
   [class~=ant-list-item-meta-title] {
     margin-bottom: 0;
