--- a/src/pages/Test/Workflow/style.less
+++ b/src/pages/Test/Workflow/style.less
@@ -1,9 +1,27 @@
 .workflow {
   [class~=ant-form-item] {
     margin-bottom: 8px;
+    padding-bottom: 0;
   }
   [class~=ant-form-item-label] {
-    float: left;
+    padding: 0;
+    label {
+      color: #888;
+      transition: color .4s;
+      display: block;
+      font-size: 12px;
+      transform: scale(0.8);
+      transform-origin: left;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+  [class~=ant-form-item] {
+    &:hover {
+      &>[class~=ant-form-item-label] label {
+        color: #333;
+      }
+    }
   }
   [class~=ant-form-item-control-wrapper] {
     overflow: hidden;
